# bazel_jest_snapshot_repro

./: README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
lib/: BUILD.bazel  jest.config.js  tsconfig.build.json  tsconfig.json  tsconfig.test.json
lib/src/: say-hello.spec.ts
