load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Rules JS

http_archive(
    name = "aspect_rules_js",
    sha256 = "2503a997149b6633751467e083ff5ef114082c275cc53512e60c6f8a10fc08b8",
    strip_prefix = "rules_js-1.25.1",
    url = "https://github.com/aspect-build/rules_js/releases/download/v1.25.1/rules_js-v1.25.1.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

http_archive(
    name = "aspect_rules_ts",
    sha256 = "8eb25d1fdafc0836f5778d33fb8eaac37c64176481d67872b54b0a05de5be5c0",
    strip_prefix = "rules_ts-1.3.3",
    url = "https://github.com/aspect-build/rules_ts/releases/download/v1.3.3/rules_ts-v1.3.3.tar.gz",
)

load("@aspect_rules_ts//ts:repositories.bzl", "rules_ts_dependencies")

rules_ts_dependencies(ts_version_from = "//:package.json")

# Rules Jest

http_archive(
    name = "aspect_rules_jest",
    sha256 = "48a16d31be995b2fdd868f5e18aee3d1980061576be75bad98bbbe1de2dde9d3",
    strip_prefix = "rules_jest-0.18.2",
    url = "https://github.com/aspect-build/rules_jest/releases/download/v0.18.2/rules_jest-v0.18.2.tar.gz",
)

load("@aspect_rules_jest//jest:dependencies.bzl", "rules_jest_dependencies")

rules_jest_dependencies()

# Rules NodeJS

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "nodejs",
    node_version = "18.12.0",
)

# NPM

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

